# Three-Party-Sorting

./: CMakeLists.txt  main.cpp
include/: Semi_honest_security.cpp  Semi_honest_security.h  malicious_security.cpp  malicious_security.h
